--- a/homepage.html
+++ b/homepage.html
@@ -87,38 +87,38 @@
 
 		<section id="temoignages">
 			<div class="row">
-				<div class="col-xs-12 col-md-3"> 
+				<div class="col-xs-12 col-md-2"> 
 					<img class="tem1" src= "img/photo_temoignage_1.jpg"/>
 				</div>
 				<div class="col-xs-12 col-md-9">
 					<p class="Para">
-					<< HTML, CSS, RUBY, PHP,Javascript...Pendant 5 mois, 
-					l'enseignement s'organise autour de 4 séquences dapprentissage: réalisation d'un projet de fin étude.>>
-					<br/>Prénom Nom, Age, promo n°2
+					&#171; HTML, CSS, RUBY, PHP,Javascript...Pendant 5 mois, 
+					l'enseignement s'organise autour de 4 séquences dapprentissage: réalisation d'un projet de fin étude. &#187;
+					<br/><span>Prénom Nom, Age, promo n°2<span>
 					</p>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-xs-12 col-md-3 col-md-push-9">
+				<div class="col-xs-12 col-md-2 col-md-push-10">
 					<img class="tem2" src="img/photo_temoignage_2.jpg"/>
 				</div>
-				<div class="col-xs-12 col-md-9 col-md-pull-3">
+				<div class="col-xs-12 col-md-10 col-md-pull-2">
 					<p class="Parap">
-					<< HTML, CSS, RUBY, PHP,Javascipt...Pendant 5 mois, 
-					l'enseignement s'organise autour de 4 séquences dapprentissage: réalisation d'un projet de fin étude.>>
-					<br/>Prénom Nom, Age, promo n°2
+					&#171; HTML, CSS, RUBY, PHP,Javascipt...Pendant 5 mois, 
+					l'enseignement s'organise autour de 4 séquences dapprentissage: réalisation d'un projet de fin étude. &#187;
+					<br/><span>Prénom Nom, Age, promo n°2<span>
 					</p>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-xs-12 col-md-3">
+				<div class="col-xs-12 col-md-2">
 					<img class= "tem3" src="img/photo_temoignage_3.jpg"/>
 				</div>
 				<div class="col-xs-12 col-md-9">
 					<p class="Para">
-					<< HTML, CSS, RUBY, PHP,Javascript...Pendant 5 mois, 
-					l'enseignement s'organise autour de 4 séquences dapprentissage: réalisation d'un projet de fin étude.>>
-					<br>Prénom Nom, Age, promo n°2
+					&#171; HTML, CSS, RUBY, PHP,Javascript...Pendant 5 mois, 
+					l'enseignement s'organise autour de 4 séquences dapprentissage: réalisation d'un projet de fin étude. &#187;
+					<br><span>Prénom Nom, Age, promo n°2<span>
 					</p>
 				</div>
 			</div>
@@ -127,13 +127,36 @@
 		<section id="evenement">
 			<div class="container">
 				<div class="row">
-					<div class="col-xs-12 col-sm-6" id="slider">
-						<p>ICI SERA PLACER LE SLIDER A DEVELOPPER
-						ICI SERA PLACER LE SLIDER A DEVELOPPER
-						ICI SERA PLACER LE SLIDER A DEVELOPPER
-						ICI SERA PLACER LE SLIDER A DEVELOPPER</p>
+					<div class="col-xs-12 col-sm-5" id="slider">
+						<div id="myCarousel" class="carousel slide" data-ride="carousel">
+							<!-- Indicators -->
+							<ol class="carousel-indicators">
+								<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+								<li data-target="#myCarousel" data-slide-to="1"></li>
+								<li data-target="#myCarousel" data-slide-to="2"></li>
+								<li data-target="#myCarousel" data-slide-to="3"></li>
+							</ol>
+							<!-- Wrapper for slides -->
+							<div class="carousel-inner" role="listbox">
+								<div class="item active">
+									<img src="img/coworking2.jpg" alt="Coworking">
+								</div>
+								<div class="item">
+									<img src="img/image_video.png" alt="image_video">
+								</div>
+							</div>
+							<!-- Left and right controls -->
+							<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+								<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+								<span class="sr-only">Previous</span>
+							</a>
+							<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+								<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+								<span class="sr-only">Next</span>
+							</a>
+							</div>
 					</div>
-					<div class="col-xs-12 col-sm-6" id="newsletter">
+					<div class="col-xs-12 col-sm-7" id="newsletter">
 						<h1>Suivez-nous !</h1>
 						<div class="social">
 						<img src="img/concept/screencode-black-50.png" alt="#" />
@@ -214,7 +237,7 @@
 				</div>
 			</div>
 		</section>
+		<script src="js/jquery.js"></script>
+		<script src="js/bootstrap.js"></script>
 	</body>
-<script src="js/jquery.js"></script>
-<script src="js/bootstrap.js"></script>
 </html>
