responsive + arrangement divers

--- a/homepage.html
+++ b/homepage.html
@@ -44,7 +44,7 @@
 					<h1>Go to the transition</h1>
 				</div>
 				<div class="row bouton">
-					<h2><a href="#" alt="je candidate"><span class"bouton_candidat">&#8249; Je candidate /&#8250;</span></a></h2>
+					<h2><a href="#" alt="je candidate"><span class="bouton_candidat">&lt Je candidate &#47 &gt</span></a></h2>
 				</div>
 			</div>
 		</section>
@@ -75,7 +75,7 @@
 
 		<section id="section_video">
 			<div class="row">
-				<div class="col-xs-12 col-sm-6 col-md-6 texte" >
+				<div class="col-xs-12 col-sm-6 col-md-6 texte-video" >
 					<h1>une ecole de code et une startup</h1>
 					<p><span>HTML, CSS, RUBY, PHP, JavaScript… Pendant 5 mois, l’enseignement s’organise autour de 4 séquences d’appretion web dynamique, puis la réalisation d’un projet de fin d’étude.</span></p>
 				</div>
@@ -88,37 +88,37 @@
 		<section id="temoignages">
 			<div class="row">
 				<div class="col-xs-12 col-md-2"> 
-					<img class="tem1" src= "img/photo_temoignage_1.jpg"/>
+					<img class="tem1" src= "img/photo_temoignage_1.jpg" alt="photo de profil"/>
 				</div>
 				<div class="col-xs-12 col-md-9">
 					<p class="Para">
-					&#171; HTML, CSS, RUBY, PHP,Javascript...Pendant 5 mois, 
-					l'enseignement s'organise autour de 4 séquences dapprentissage: réalisation d'un projet de fin étude. &#187;
-					<br/><span>Prénom Nom, Age, promo n°2<span>
+					&ldquo; HTML, CSS, RUBY, PHP,Javascript...Pendant 5 mois, 
+					l'enseignement s'organise autour de 4 séquences dapprentissage: réalisation d'un projet de fin étude. &rdquo;
+					<br/><span>Prénom Nom, Age, promo n°2</span>
 					</p>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-xs-12 col-md-2 col-md-push-10">
-					<img class="tem2" src="img/photo_temoignage_2.jpg"/>
+					<img class="tem2" src="img/photo_temoignage_2.jpg" alt="photo de profil"/>
 				</div>
 				<div class="col-xs-12 col-md-4 col-md-offset-6 col-md-pull-2">
 					<p class="Parap">
 					&#171; HTML, CSS, RUBY, PHP,Javascipt...Pendant 5 mois, 
 					l'enseignement s'organise autour de 4 séquences dapprentissage: réalisation d'un projet de fin étude. &#187;
-					<br/><span>Prénom Nom, Age, promo n°2<span>
+					<br/><span>Prénom Nom, Age, promo n°2</span>
 					</p>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-xs-12 col-md-2">
-					<img class= "tem3" src="img/photo_temoignage_3.jpg"/>
+					<img class= "tem3" src="img/photo_temoignage_3.jpg" alt="photo de profil"/>
 				</div>
 				<div class="col-xs-12 col-md-9">
 					<p class="Para">
 					&#171; HTML, CSS, RUBY, PHP,Javascript...Pendant 5 mois, 
 					l'enseignement s'organise autour de 4 séquences dapprentissage: réalisation d'un projet de fin étude. &#187;
-					<br><span>Prénom Nom, Age, promo n°2<span>
+					<br/><span>Prénom Nom, Age, promo n°2</span>
 					</p>
 				</div>
 			</div>
@@ -139,10 +139,10 @@
 							<!-- Wrapper for slides -->
 							<div class="carousel-inner" role="listbox">
 								<div class="item active">
-									<img src="img/coworking2.jpg" alt="Coworking">
+									<img src="img/coworking2.jpg" alt="Coworking" />
 								</div>
 								<div class="item">
-									<img src="img/image_video.png" alt="image_video">
+									<img src="img/image_video.png" alt="image_video" />
 								</div>
 							</div>
 							<!-- Left and right controls -->
