--- a/homepage.html
+++ b/homepage.html
@@ -90,7 +90,7 @@
 				<div class="col-xs-12 col-md-2"> 
 					<img class="tem1" src= "img/photo_temoignage_1.jpg" alt="photo de profil"/>
 				</div>
-				<div class="col-xs-12 col-md-9">
+				<div class="col-xs-12 col-md-4 col-md offset-6">
 					<p class="Para">
 					&ldquo; HTML, CSS, RUBY, PHP,Javascript...Pendant 5 mois, 
 					l'enseignement s'organise autour de 4 séquences dapprentissage: réalisation d'un projet de fin étude. &rdquo;
@@ -114,7 +114,7 @@
 				<div class="col-xs-12 col-md-2">
 					<img class= "tem3" src="img/photo_temoignage_3.jpg" alt="photo de profil"/>
 				</div>
-				<div class="col-xs-12 col-md-9">
+				<div class="col-xs-12 col-sm-4 col-md offset-6">
 					<p class="Para">
 					&#171; HTML, CSS, RUBY, PHP,Javascript...Pendant 5 mois, 
 					l'enseignement s'organise autour de 4 séquences dapprentissage: réalisation d'un projet de fin étude. &#187;
