--- a/homepage.html
+++ b/homepage.html
@@ -127,7 +127,7 @@
 		<section id="evenement">
 			<div class="container">
 				<div class="row">
-					<div class="col-xs-12 col-sm-5" id="slider">
+					<div class="col-xs-12 col-sm-6" id="slider">
 						<div id="myCarousel" class="carousel slide" data-ride="carousel">
 							<!-- Indicators -->
 							<ol class="carousel-indicators">
@@ -156,21 +156,46 @@
 							</a>
 							</div>
 					</div>
-					<div class="col-xs-12 col-sm-7" id="newsletter">
-						<h1>Suivez-nous !</h1>
-						<div class="social">
-						<img src="img/concept/screencode-black-50.png" alt="#" />
-						<img src="img/concept/screencode-black-50.png" alt="#" />
-						<img src="img/concept/screencode-black-50.png" alt="#" />
-						<img src="img/concept/screencode-black-50.png" alt="#" />
-						<img src="img/concept/screencode-black-50.png" alt="#" />
-						<img src="img/concept/screencode-black-50.png" alt="#" />
-					</div>
-						<p>Abonnez-vous à notre newsletter & restez informé</p>
-						<form method="#" action="#">
-							<input type="email" placeholder="Entrez votre e-mail"/>
-							<input src="img/arrow-right.png" type="image" Value="submit" align="middle"/>
-						</form>
+					<div class="col-xs-12 col-sm-6" id="newsletter">
+						<div class="row row1">
+							<div class="col-sm-11 col-sm-offset-1">
+								<h1>Suivez-nous !</h1>
+							</div>
+						</div>
+						<div class="row row2">
+							<div class="col-xs-1 col-sm-1 col-md-1 col-xs-offset-1 first_pictogramme">
+								<img src="img/concept/screencode-black-50.png" alt="#" />
+							</div>
+							<div class="col-xs-1 col-sm-1 col-md-1 col-xs-offset-1 pictogramme">
+								<img src="img/concept/screencode-black-50.png" alt="#" />
+							</div>
+							<div class="col-xs-1 col-sm-1 col-md-1 col-xs-offset-1 pictogramme">
+								<img src="img/concept/screencode-black-50.png" alt="#" />
+							</div>
+							<div class="col-xs-1 col-sm-1 col-md-1 col-xs-offset-1 pictogramme">
+								<img src="img/concept/screencode-black-50.png" alt="#" />
+							</div>
+							<div class="col-xs-1 col-sm-1 col-md-1 col-xs-offset-1 pictogramme">
+								<img src="img/concept/screencode-black-50.png" alt="#" />
+							</div>
+							<div class="col-xs-1 col-sm-1 col-md-1 col-xs-offset-1 pictogramme">
+								<img src="img/concept/screencode-black-50.png" alt="#" />
+							</div>
+						</div>
+						<div class="row row3">
+							<div class="col-xs-11 col-xs-offset-1">
+								<p>Abonnez-vous à notre newsletter & restez informé</p>
+							</div>
+						</div>
+						<div class="row row4">
+							<div class="col-xs-11 col-xs-offset-1">
+								<form method="#" action="#">
+									<input type="email" placeholder="Entrez votre e-mail"/>
+									<input src="img/arrow-right.png" type="image" Value="submit" align="middle"/>
+								</form>
+							</div>
+						</div>
+						
 					</div>
 				</div>
 			</div><!-- FIN DIV .container #EVENEMENT -->
