--- a/homepage.html
+++ b/homepage.html
@@ -74,16 +74,29 @@
 		</section>
 
 		<section id="section_video">
+			<div class="video">
+				<h1>une ecole de code & une startup</h1>
+				<p>HTML, CSS, RUBY, PHP, JavaScript… Pendant 5 mois, l’enseignement s’organise autour de 4 séquences d’appretion web dynamique, puis la réalisation d’un projet de fin d’étude.
+				HTML, CSS, RUBY, PHP, JavaScript… Pendant 5 mois, l’enseignement s’organise autour de 4 séquences d’appretion web dynamique, puis la réalisation d’un projet de fin d’étude.
+				</p>
+			</div>
+			<div class="video">
+				<img src="img/image_video.png">
+			</div>
+		</section>
+		<!-- <section id="section_video">
 			<div class="row">
-				<div class="col-xs-12 col-sm-6 col-md-6 texte-video" >
-					<h1>une ecole de code et une startup</h1>
-					<p><span>HTML, CSS, RUBY, PHP, JavaScript… Pendant 5 mois, l’enseignement s’organise autour de 4 séquences d’appretion web dynamique, puis la réalisation d’un projet de fin d’étude.</span></p>
+				<div class="col-xs-12 col-sm-12 col-md-6 text-video" >
+					<h1>une ecole de code & une startup</h1>
+					<p>HTML, CSS, RUBY, PHP, JavaScript… Pendant 5 mois, l’enseignement s’organise autour de 4 séquences d’appretion web dynamique, puis la réalisation d’un projet de fin d’étude.</p>
+					<p>HTML, CSS, RUBY, PHP, JavaScript… Pendant 5 mois, l’enseignement s’organise autour de 4 séquences d’appretion web dynamique, puis la réalisation d’un projet de fin d’étude.
+					HTML, CSS, RUBY, PHP, JavaScript… Pendant 5 mois, l’enseignement s’organise autour de 4 séquences d’appretion web dynamique, puis la réalisation d’un projet de fin d’étude.</p>
 				</div>
-				<div class="col-xs-12 col-sm-6 col-md-6 video">
+				<div class="col-xs-12 col-sm-12 col-md-6 video">
 					<img src="img/image_video.png">
 				</div>
 			</div>
-		</section>
+		</section>-->
 
 		<section id="temoignages">
 			<div class="row">
