--- a/homepage.html
+++ b/homepage.html
@@ -99,7 +99,7 @@
 		</section>-->
 
 		<section id="temoignages">
-			<div class="row">
+			<div class="row row_temoignage">
 				<div class="col-xs-12 col-md-2"> 
 					<img class="tem1" src= "img/photo_temoignage_1.jpg" alt="photo de profil"/>
 				</div>
@@ -111,7 +111,7 @@
 					</p>
 				</div>
 			</div>
-			<div class="row">
+			<div class="row row_temoignage">
 				<div class="col-xs-12 col-md-2 col-md-push-10">
 					<img class="tem2" src="img/photo_temoignage_2.jpg" alt="photo de profil"/>
 				</div>
@@ -123,7 +123,7 @@
 					</p>
 				</div>
 			</div>
-			<div class="row">
+			<div class="row row_temoignage">
 				<div class="col-xs-12 col-md-2">
 					<img class= "tem3" src="img/photo_temoignage_3.jpg" alt="photo de profil"/>
 				</div>
@@ -171,7 +171,7 @@
 					</div>
 					<div class="col-xs-12 col-sm-6" id="newsletter">
 						<div class="row row1">
-							<div class="col-sm-11 col-sm-offset-1">
+							<div class="col-xs-11 col-xs-offset-1">
 								<h1>Suivez-nous !</h1>
 							</div>
 						</div>
