--- a/homepage.html
+++ b/homepage.html
@@ -171,12 +171,12 @@
 					</div>
 					<div class="col-xs-12 col-sm-6" id="newsletter">
 						<div class="row row1">
-							<div class="col-xs-11 col-xs-offset-1">
+							<div class="col-xs-11 col-xs-offset-1 marge_responsive">
 								<h1>Suivez-nous !</h1>
 							</div>
 						</div>
 						<div class="row row2">
-							<div class="col-xs-1 col-sm-1 col-md-1 col-xs-offset-1 first_pictogramme">
+							<div class="col-xs-1 col-sm-1 col-md-1 col-xs-offset-1 first_pictogramme marge_responsive">
 								<img src="img/concept/screencode-black-50.png" alt="#" />
 							</div>
 							<div class="col-xs-1 col-sm-1 col-md-1 col-xs-offset-1 pictogramme">
@@ -196,12 +196,12 @@
 							</div>
 						</div>
 						<div class="row row3">
-							<div class="col-xs-11 col-xs-offset-1">
+							<div class="col-xs-11 col-xs-offset-1 marge_responsive">
 								<p>Abonnez-vous à notre newsletter & restez informé</p>
 							</div>
 						</div>
 						<div class="row row4">
-							<div class="col-xs-11 col-xs-offset-1">
+							<div class="col-xs-11 col-xs-offset-1 marge_responsive">
 								<form method="#" action="#">
 									<input type="email" placeholder="Entrez votre e-mail"/>
 									<input src="img/arrow-right.png" type="image" Value="submit" align="middle"/>
