Responsive footer OK + Ajout lien au menu

--- a/homepage.html
+++ b/homepage.html
@@ -220,51 +220,51 @@
 					<div class="col-md-2 col-sm-4 col-xs-6">
 						<ul>
 							<li class="first_field">NOTRE MÉTHODE</li>
-							<li>Notre approche pédagogique</li>
-							<li>Le programme</li>
-							<li>La plateforme pédagogique</li>
-							<li>L’innovation continue</li>
+							<li><a href="#">Notre approche pédagogique</a></li>
+							<li><a href="#">Le programme</a></li>
+							<li><a href="#">La plateforme pédagogique</a></li>
+							<li><a href="#">L’innovation continue</a></li>
 						</ul>
 					</div>
 					<div class="col-md-2 col-sm-4 col-xs-6">
 						<ul>
 							<li class="first_field">ÉLÈVES</li>
-							<li>Intégrer l’école</li>
-							<li>Je candidate!</li>
-							<li>Les débouchés</li>
-							<li>Le financement</li>
-							<li>L’internat</li>
-							<li>La promo 2015</li>
-							<li>FAQ</li>
+							<li><a href="#">Intégrer l’école</a></li>
+							<li><a href="#">Je candidate!</a></li>
+							<li><a href="#">Les débouchés</a></li>
+							<li><a href="#">Le financement</a></li>
+							<li><a href="#">L’internat</a></li>
+							<li><a href="#">La promo 2015</a></li>
+							<li><a href="#">FAQ</a></li>
 						</ul>
 					</div>
 					<div class="col-md-2 col-sm-4 col-xs-6">
 						<ul>
 							<li class="first_field">PARTENAIRES</li>
-							<li>Faire un projet avec nous</li>
-							<li>Devenir mentor</li>
-							<li>Embaucher un étudiant</li>
-							<li>Soutenir l’école</li>
-							<li>Nos partenaires</li>
+							<li><a href="#">Faire un projet avec nous</a></li>
+							<li><a href="#">Devenir mentor</a></li>
+							<li><a href="#">Embaucher un étudiant</a></li>
+							<li><a href="#">Soutenir l’école</a></li>
+							<li><a href="#">Nos partenaires</a></li>
 						</ul>
 					</div>
 					<div class="col-md-2 col-sm-4 col-xs-6">
 						<ul>
 							<li class="first_field">OUVRIR UNE ÉCOLE</li>
-							<li>Une école sur votre territoire</li>
-							<li>Qui fait quoi ?</li>
-							<li>La gouvernance</li>
+							<li><a href="#">Une école sur votre territoire</a></li>
+							<li><a href="#">Qui fait quoi ?</a></li>
+							<li><a href="#">La gouvernance</a></li>
 						</ul>
 					</div>
 					<div class="col-md-2 col-sm-4 col-xs-6">
 						<ul>
 							<li class="first_field">À PROPOS</li>
-							<li>Notre mission</li>
-							<li>L’équipe</li>
-							<li>Presse</li>
-							<li>Rejoignez-nous !</li>
-							<li>Blog</li>
-							<li>Contact</li>
+							<li><a href="#">Notre mission</a></li>
+							<li><a href="#">L’équipe</a></li>
+							<li><a href="#">Presse</a></li>
+							<li><a href="#">Rejoignez-nous !</a></li>
+							<li><a href="#">Blog</a></li>
+							<li><a href="#">Contact</a></li>
 						</ul>	
 					</div>
 					<div class="col-md-2 col-sm-4 col-xs-6">
