--- a/homepage.html
+++ b/homepage.html
@@ -54,20 +54,20 @@
 				<h1>Le concept</h1>
 				<div class ="row">
 					<div class="col-md-3 col-sm-6 col-xs-12">
-						<img src="img/concept/handshake-black-50.png" alt="#" />
+						<img src="img/concept/code.svg" alt="picto code" width="500px" />
 						<p>HTML, CSS, RUBY, PHP, JavaScript... Pendant 5 mois, l’enseignement s’organise autour de 4 séquences d’apprentissage : la création d’un site statique, d’une application web dynamique, l’apprentissage d’un langage de programmation puis la réalisation d’un projet de fin d’étude.</p>
 					</div>
 					<div class="col-md-3 col-sm-6 col-xs-12">
-						<img src="img/concept/screencode-black-50.png" alt="#" />
-						<p>HTML, CSS, RUBY, PHP, JavaScript... Pendant 5 mois, l’enseignement s’organise autour de 4 séquences d’apprentissage : la création d’un site statique, d’une application web dynamique, l’apprentissage d’un langage de programmation puis la réalisation d’un projet de fin d’étude.</p>
+						<img src="img/concept/outils.svg" alt="picto outils" />
+						<p>Basée sur une pédagogie participative et ouverte sur le monde professionnel, notre école reçoit de nombreuses propositions de projets que les élèves réalisent. Ainsi à la fin de la formation, chaque élève dispose d'un véritable portefolio. Il bénéficie d'un accompagnement personnalisé vers la réalisation de son projet professionnel, emploi salarié ou création d'entreprise.</p>
 					</div>
 					<div class="col-md-3 col-sm-6 col-xs-12">
-						<img src="img/concept/screwdriver-black-50.png" alt="#" />
-						<p>HTML, CSS, RUBY, PHP, JavaScript... Pendant 5 mois, l’enseignement s’organise autour de 4 séquences d’apprentissage : la création d’un site statique, d’une application web dynamique, l’apprentissage d’un langage de programmation puis la réalisation d’un projet de fin d’étude.</p>
+						<img src="img/concept/community.svg" alt="picto community" />
+						<p>Mêlant des élèves d'âges et d'horizons divers, l'enseignement repose sur l'échange et la mutualisation des connaissances. Plus qu'une simple école, Wild code School est un véritable écosystème d'acteurs du territoire et de professionnels nationaux et internationaux. chaque semaine, un intervenant extérieur vient présenter un thème et rencontrer les élèves à leur tour, les élèves participent à de nombreux événements en Eure-et-Loir, à Paris, Le Mans ou Tours (hackatons, meetups, forums...).</p>
 					</div>
 					<div class="col-md-3 col-sm-6 col-xs-12">
-						<img src="img/concept/sofa-black-50.png" alt="#" />
-						<p>HTML, CSS, RUBY, PHP, JavaScript... Pendant 5 mois, l’enseignement s’organise autour de 4 séquences d’apprentissage : la création d’un site statique, d’une application web dynamique, l’apprentissage d’un langage de programmation puis la réalisation d’un projet de fin d’étude.</p>
+						<img src="img/concept/sofa.svg" alt="picto sofa" />
+						<p>Notre école n'est pas comme les autres. L'espace de travail et de détente évolue en fonction des envies des élèves. L'école devient leur deuxième maison, la promotion leur deuxième famille. Grâce à la petite taille de la promotion, chacun apprend à connaître chacun et développer des liens d'amitiés durables.</p>
 					</div>
 				</div>  <!-- FIN DIV .row -->
 			</div>   <!--FIN DIV .containre #CONCEPT -->
