RAZ pour fusion des docs

--- a/homepage.html
+++ b/homepage.html
@@ -54,20 +54,20 @@
 				<h1>Le concept</h1>
 				<div class ="row">
 					<div class="col-md-3 col-sm-6 col-xs-12">
-						<img src="img/concept/handshake-black-50.png" alt="#" />
+						<img src="img/concept/code.svg" alt="picto code" width="120px" />
 						<p>HTML, CSS, RUBY, PHP, JavaScript... Pendant 5 mois, l’enseignement s’organise autour de 4 séquences d’apprentissage : la création d’un site statique, d’une application web dynamique, l’apprentissage d’un langage de programmation puis la réalisation d’un projet de fin d’étude.</p>
 					</div>
 					<div class="col-md-3 col-sm-6 col-xs-12">
-						<img src="img/concept/screencode-black-50.png" alt="#" />
-						<p>HTML, CSS, RUBY, PHP, JavaScript... Pendant 5 mois, l’enseignement s’organise autour de 4 séquences d’apprentissage : la création d’un site statique, d’une application web dynamique, l’apprentissage d’un langage de programmation puis la réalisation d’un projet de fin d’étude.</p>
+						<img src="img/concept/outils.svg" alt="picto outils" width="120px" />
+						<p>Basée sur une pédagogie participative et ouverte sur le monde professionnel, notre école reçoit de nombreuses propositions de projets que les élèves réalisent. Ainsi à la fin de la formation, chaque élève dispose d'un véritable portefolio. Il bénéficie d'un accompagnement personnalisé vers la réalisation de son projet professionnel, emploi salarié ou création d'entreprise.</p>
 					</div>
 					<div class="col-md-3 col-sm-6 col-xs-12">
-						<img src="img/concept/screwdriver-black-50.png" alt="#" />
-						<p>HTML, CSS, RUBY, PHP, JavaScript... Pendant 5 mois, l’enseignement s’organise autour de 4 séquences d’apprentissage : la création d’un site statique, d’une application web dynamique, l’apprentissage d’un langage de programmation puis la réalisation d’un projet de fin d’étude.</p>
+						<img src="img/concept/community.svg" alt="picto community" width="120px"/>
+						<p>Mêlant des élèves d'âges et d'horizons divers, l'enseignement repose sur l'échange et la mutualisation des connaissances. Plus qu'une simple école, Wild code School est un véritable écosystème d'acteurs du territoire et de professionnels nationaux et internationaux. chaque semaine, un intervenant extérieur vient présenter un thème et rencontrer les élèves à leur tour, les élèves participent à de nombreux événements en Eure-et-Loir, à Paris, Le Mans ou Tours (hackatons, meetups, forums...).</p>
 					</div>
 					<div class="col-md-3 col-sm-6 col-xs-12">
-						<img src="img/concept/sofa-black-50.png" alt="#" />
-						<p>HTML, CSS, RUBY, PHP, JavaScript... Pendant 5 mois, l’enseignement s’organise autour de 4 séquences d’apprentissage : la création d’un site statique, d’une application web dynamique, l’apprentissage d’un langage de programmation puis la réalisation d’un projet de fin d’étude.</p>
+						<img src="img/concept/sofa.svg" alt="picto sofa" width="120px"/>
+						<p>Notre école n'est pas comme les autres. L'espace de travail et de détente évolue en fonction des envies des élèves. L'école devient leur deuxième maison, la promotion leur deuxième famille. Grâce à la petite taille de la promotion, chacun apprend à connaître chacun et développer des liens d'amitiés durables.</p>
 					</div>
 				</div>  <!-- FIN DIV .row -->
 			</div>   <!--FIN DIV .containre #CONCEPT -->
@@ -105,8 +105,8 @@
 				</div>
 				<div class="col-xs-12 col-md-6 col-md offset-4" text-align="center">
 					<p class="Para">
-					&ldquo; HTML, CSS, RUBY, PHP,Javascript...Pendant 5 mois, 
-					l'enseignement s'organise autour de 4 séquences dapprentissage: réalisation d'un projet de fin étude. &rdquo;
+					&#171; HTML, CSS, RUBY, PHP,Javascript...Pendant 5 mois, 
+					l'enseignement s'organise autour de 4 séquences dapprentissage: réalisation d'un projet de fin étude. &#187;
 					<br/><span>Prénom Nom, Age, promo n°2</span>
 					</p>
 				</div>
@@ -177,22 +177,19 @@
 						</div>
 						<div class="row row2">
 							<div class="col-xs-1 col-sm-1 col-md-1 col-xs-offset-1 first_pictogramme marge_responsive">
-								<img src="img/concept/screencode-black-50.png" alt="#" />
+								<a href="https://www.facebook.com/wildcodeschool"><img src="img/social/facebook.svg" alt="Facebook" /></a>
 							</div>
 							<div class="col-xs-1 col-sm-1 col-md-1 col-xs-offset-1 pictogramme">
-								<img src="img/concept/screencode-black-50.png" alt="#" />
+								<a href="https://twitter.com/WildCodeSchool"><img src="img/social/twitter.svg" alt="Twitter" /></a>
 							</div>
 							<div class="col-xs-1 col-sm-1 col-md-1 col-xs-offset-1 pictogramme">
-								<img src="img/concept/screencode-black-50.png" alt="#" />
+								<a href="https://plus.google.com/107991817182549244708/posts"><img src="img/social/google.svg" alt="Google+" /></a>
 							</div>
 							<div class="col-xs-1 col-sm-1 col-md-1 col-xs-offset-1 pictogramme">
-								<img src="img/concept/screencode-black-50.png" alt="#" />
+								<a href="https://instagram.com/wildcodeschool/"><img src="img/social/instagram.svg" alt="Instagram"/></a>
 							</div>
 							<div class="col-xs-1 col-sm-1 col-md-1 col-xs-offset-1 pictogramme">
-								<img src="img/concept/screencode-black-50.png" alt="#" />
-							</div>
-							<div class="col-xs-1 col-sm-1 col-md-1 col-xs-offset-1 pictogramme">
-								<img src="img/concept/screencode-black-50.png" alt="#" />
+								<a href="https://www.youtube.com/channel/UCi99G_0QPx5sYsK8zdvQzfw/feed"><img src="img/social/youtube.svg" alt="Youtube" width="50px" /></a>
 							</div>
 						</div>
 						<div class="row row3">
@@ -220,52 +217,52 @@
 					<div class="col-md-2 col-sm-4 col-xs-6">
 						<ul>
 							<li class="first_field">NOTRE MÉTHODE</li>
-							<li>Notre approche pédagogique</li>
-							<li>Le programme</li>
-							<li>La plateforme pédagogique</li>
-							<li>L’innovation continue</li>
+							<li><a href="#">Notre approche pédagogique</a></li>
+							<li><a href="#">Le programme</a></li>
+							<li><a href="#">La plateforme pédagogique</a></li>
+							<li><a href="#">L’innovation continue</a></li>
 						</ul>
 					</div>
-					<div class="col-md-2 col-sm-4 col-xs-6">
+					<div class="col-md-2 col-sm-2 col-xs-6">
 						<ul>
 							<li class="first_field">ÉLÈVES</li>
-							<li>Intégrer l’école</li>
-							<li>Je candidate!</li>
-							<li>Les débouchés</li>
-							<li>Le financement</li>
-							<li>L’internat</li>
-							<li>La promo 2015</li>
-							<li>FAQ</li>
+							<li><a href="#">Intégrer l’école</a></li>
+							<li><a href="#">Je candidate!</a></li>
+							<li><a href="#">Les débouchés</a></li>
+							<li><a href="#">Le financement</a></li>
+							<li><a href="#">L’internat</a></li>
+							<li><a href="#">La promo 2015</a></li>
+							<li><a href="#">FAQ</a></li>
 						</ul>
 					</div>
-					<div class="col-md-2 col-sm-4 col-xs-6">
+					<div class="col-md-2 col-sm-2 col-xs-6">
 						<ul>
 							<li class="first_field">PARTENAIRES</li>
-							<li>Faire un projet avec nous</li>
-							<li>Devenir mentor</li>
-							<li>Embaucher un étudiant</li>
-							<li>Soutenir l’école</li>
-							<li>Nos partenaires</li>
+							<li><a href="#">Faire un projet avec nous</a></li>
+							<li><a href="#">Devenir mentor</a></li>
+							<li><a href="#">Embaucher un étudiant</a></li>
+							<li><a href="#">Soutenir l’école</a></li>
+							<li><a href="#">Nos partenaires</a></li>
 						</ul>
 					</div>
-					<div class="col-md-2 col-sm-4 col-xs-6">
+					<div class="col-md-2 col-sm-2 col-xs-6">
 						<ul>
 							<li class="first_field">OUVRIR UNE ÉCOLE</li>
-							<li>Une école sur votre territoire</li>
-							<li>Qui fait quoi ?</li>
-							<li>La gouvernance</li>
+							<li><a href="#">Une école sur votre territoire</a></li>
+							<li><a href="#">Qui fait quoi ?</a></li>
+							<li><a href="#">La gouvernance</a></li>
 						</ul>
 					</div>
-					<div class="col-md-2 col-sm-4 col-xs-6">
+					<div class="col-md-2 col-sm-2 col-xs-6">
 						<ul>
 							<li class="first_field">À PROPOS</li>
-							<li>Notre mission</li>
-							<li>L’équipe</li>
-							<li>Presse</li>
-							<li>Rejoignez-nous !</li>
-							<li>Blog</li>
-							<li>Contact</li>
-						</ul>	
+							<li><a href="#">Notre mission</a></li>
+							<li><a href="#">L’équipe</a></li>
+							<li><a href="#">Presse</a></li>
+							<li><a href="#">Rejoignez-nous !</a></li>
+							<li><a href="#">Blog</a></li>
+							<li><a href="#">Contact</a></li>
+						</ul>		
 					</div>
 					<div class="col-md-2 col-sm-4 col-xs-6">
 						<ul>
